--- a/estilos.css
+++ b/estilos.css
@@ -32,9 +32,13 @@ body{
     
 }
 
+.nav-item a:hover{
+    color: #f1f1f1 !important;
+}
 .navbar-brand{
     padding-left: 30px;
 }
+
 .navbar-brand img{
     border-radius: 100px;
     width: 10rem;
@@ -208,6 +212,7 @@ height: 100vh;
 .container-slide{
     width: 100%;
     height: 100vh;
+    margin-bottom: 100px;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -217,6 +222,7 @@ height: 100vh;
     width: 500px;
     height: 300px;
     text-align: center;
+    
 
 }
 .main-details p{
@@ -287,12 +293,63 @@ height: 100vh;
  }
 
  .list-inline-item a:hover{
-     color: #fff;
+    color: #fff;
      text-decoration: none;
  }
 
 /*######################## RESPONSIVE #######################################3*/
+@media screen and (min-width: 320px) and (max-width: 360px){
+    .navbar{
+        display: flex;
+        flex-direction: column;
+        
+        
+    }
+    .navbar-brand{
+        margin-top: 18px;
+    }
+    .navbar-toggler{
+        margin: 18px auto;
+    }
+    .main-activity{
+        max-width: 100%;
+    }
+ 
+    .titular-actividades::before{
+     content: '';
+     background: #002642;
+     width: 200px;
+     height: 4px;
+     margin-left: auto;
+     margin-right: auto;
+     display: block;
+     transform: translateY(280px);
+ }
+ .container-slide{
+    width: 100%;
+    height: 160vh;
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    
 
+}
+.main-details{
+    max-width: 90%;
+    margin-bottom: 460px;
+}
+.slide-actividad{
+    width: 95%;
+}
+.institucional{
+    height: auto;
+}
+.container .list-inline{
+    display: flex;
+    flex-direction: column;
+    margin: 20px auto;
+}
+}
 
 @media screen and (min-width:360px) and (max-width: 575px){
     .content-center h1{
@@ -330,9 +387,13 @@ height: 100vh;
        max-width: 100%;
    }
 
-   /*Activity*/
+   /*############### ACTIVITY #####################3*/
    .main-activity{
        max-width: 100%;
+   }
+   .content-main{
+       display: flex;
+       flex-direction: column;
    }
 
    .titular-actividades::before{
@@ -343,7 +404,7 @@ height: 100vh;
     margin-left: auto;
     margin-right: auto;
     display: block;
-    transform: translateY(160px);
+    transform: translateY(240px);
 }
 
 .container-slide{
@@ -356,15 +417,21 @@ height: 100vh;
 
 }
 .main-details{
-    margin-bottom: 120px;
+    max-width: 100%;
+    margin-bottom: 180px;
 }
 .slide-actividad{
     width: 95%;
 }
+.carousel-activity{
+    max-height: 100%;
+}
 }
 
-@media screen and (min-width:576px) and (max-width: 767px){
-    .slide{
+
+ @media screen and (min-width:576px) and (max-width: 700px){
+
+.slide{
         max-width: 95%;
     }
 
@@ -400,7 +467,65 @@ height: 100vh;
     .container iframe{
         max-width: 100%;
     }
+    /*####### ACTIVITY ######*/
+    .container-slide{
+        width: 100%;
+        height: 160vh;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        
+    
+    }
+    .titular-actividades::before{
+        content: '';
+        background: #002642;
+        width: 200px;
+        height: 4px;
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
+        transform: translateY(180px);
+    }
+  
+   
     
    }
+   
     
+@media screen and (min-width: 700px) and (max-width: 991px){
 
+    .titular-actividades::before{
+        content: '';
+        background: #002642;
+        width: 200px;
+        height: 4px;
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
+        transform: translateY(120px);
+    }
+    .container-slide{
+        width: 95%;
+        height: 120vh;
+        
+        
+        
+        
+    
+    }
+    .main-details{
+        padding: 16px;
+        margin-bottom: 250px;
+    }
+    .slide-actividad{
+        margin-bottom: 250px;
+    }
+   
+    .institucional{
+        height: auto;
+        background-color: #1a1a1a;
+        color: #ffffff;
+        padding: 80px 0;
+    }
+}
