--- a/estilos.css
+++ b/estilos.css
@@ -3,8 +3,11 @@
     padding: 0;
     box-sizing: border-box;
     
+    
+    
 
 }
+
 /*--FUENTES--
     font-family: 'Nunito', sans-serif;
     font-family: 'Open Sans', sans-serif;
@@ -17,14 +20,19 @@ h1{
     line-height: 80px;
     color: #fafafa;
 }
+
 body{
+    width: 100vw;
     background-color: #f2f2f2;
     z-index: 1;
+    overflow-x: hidden;
+    
+   
 }
 
 /*Menu navegacion*/
 .navbar{
-    max-width: 100%;
+    width: 100vw;
     font-family: 'Open Sans', sans-serif;
     font-size: 20px;
     height: auto;
@@ -58,7 +66,7 @@ background-repeat: no-repeat;
 background-size: cover;
 background-position: center;
 
-width: 100%;
+width: 100vw;
 height: 100vh;
 }
 
@@ -86,7 +94,8 @@ height: 100vh;
 
 /* PRESENTACION*/
 .container-titular{
-    padding: 60px;
+    
+    padding: 20px;
 }
 
 .container .titulado{
@@ -94,10 +103,14 @@ height: 100vh;
     text-transform: uppercase;
 }
 
+.container{
+    
+    padding-top: 20px;
+}
 .container p{
     font-size: 18px;
     padding-top: 30px;
-    margin-top: 20px;
+    margin-top: 50px;
 }
 
 .titulado::before{
@@ -108,7 +121,7 @@ height: 100vh;
     margin-left: auto;
     margin-right: auto;
     display: block;
-    transform: translateY(63px);
+    transform: translateY(80px);
 }
 
 .carousel-inner .carousel-item img{
@@ -117,7 +130,7 @@ height: 100vh;
 }
 
 .carousel{
-    width: 1100px;
+    width: 100vw;
     height: 500px;
     margin: 30px auto;
 }
@@ -139,7 +152,7 @@ height: 100vh;
     height: 290px;
     background-color: #ffff;
     margin: 0 20px;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.2);
     transition: 0.4s;
 }
 
@@ -164,7 +177,7 @@ height: 100vh;
     transition: 0.1s;
 }
 .cards:hover{
-    height: 470px;
+    height: 500px;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
 }
 .cards:hover .content-text{
@@ -192,6 +205,10 @@ height: 100vh;
     padding: 60px;
     text-align: center;
 }
+.titular-actividades > img{
+    width: 160px;
+    height: 180px;
+}
 .titular-actividades::before{
     content: '';
     background: #002642;
@@ -200,7 +217,7 @@ height: 100vh;
     margin-left: auto;
     margin-right: auto;
     display: block;
-    transform: translateY(76px);
+    transform: translateY(160px);
 }
 
 .content-main h2{
@@ -245,14 +262,22 @@ height: 100vh;
 .carousel-activity img{
     width: 100%;
     height: 100%;
+    
+    
 }
 
-/*.carousel-activity img{
-    width: 100%;
-    height: 100%;
-}*/
+/*######### CONTACTO ###########*/
+.contenedor-contacto{
+    max-width: 100%;
+    height: auto;
+    
+    
+    
+}
+
 /*INSTITUCIONAL*/
   .institucional{
+      width: 100vw;
       height: 500px;
       background-color: #1a1a1a;
       color: #ffffff;
@@ -304,42 +329,77 @@ height: 100vh;
         flex-direction: column;
         
         
+        
     }
     .navbar-brand{
-        margin-top: 18px;
+        margin-top: 18px auto;
+    }
+    .navbar-brand img{
+        width: 8rem;
+        height: 8rem;
     }
     .navbar-toggler{
         margin: 18px auto;
+    }
+
+    .container .titulado{
+        font-size: 1.2rem;
     }
     .main-activity{
         max-width: 100%;
     }
  
-    .titular-actividades::before{
-     content: '';
-     background: #002642;
-     width: 200px;
-     height: 4px;
-     margin-left: auto;
-     margin-right: auto;
-     display: block;
-     transform: translateY(280px);
+
+ .carousel{
+     width: 95%;
+ }
+ .carousel img{
+     width: 100%;
+     height: 100%;
  }
  .container-slide{
     width: 100%;
-    height: 160vh;
+    height: 180vh;
     display: flex;
     flex-wrap: nowrap;
     flex-direction: column;
     
 
 }
+
+.cards{
+   margin-bottom: 40px;
+}
+.cards:hover{
+    height: 500px;
+    margin-bottom: 80px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
+    
+
+}
 .main-details{
-    max-width: 90%;
+    max-width: 95%;
     margin-bottom: 460px;
+    margin-top: 120px;
 }
 .slide-actividad{
     width: 95%;
+    padding-top: 80px;
+    
+    
+}
+.contenedor-contacto{
+    margin-top: 360px;
+}
+.contenedor-contacto > .container{
+    padding-top: 400px;
+}
+.container p{
+    display: block;
+    text-align: initial;
+}
+.container iframe{
+    width: 100%;
 }
 .institucional{
     height: auto;
@@ -349,9 +409,37 @@ height: 100vh;
     flex-direction: column;
     margin: 20px auto;
 }
+/*########## ACTIVITY ############*/
+.content-main h2 {
+    color: #000;
+    font-family: 'Nunito', sans-serif;
+    font-size: 38px;
+}
+.main-activity{
+    max-width: 100%;
+}
+.content-main{
+    display: flex;
+    flex-direction: column;
+}
+.titular-actividades > img{
+    width: 100px;
+    height: 120px;
+}
+.titular-actividades::before{
+    content: '';
+    background: #002642;
+    width: 200px;
+    height: 4px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    transform: translateY(320px);
 }
 
-@media screen and (min-width:360px) and (max-width: 575px){
+}
+
+@media screen and (min-width: 360px) and (max-width: 575px){
     .content-center h1{
         font-size: 40px;
         line-height: normal;
@@ -404,7 +492,7 @@ height: 100vh;
     margin-left: auto;
     margin-right: auto;
     display: block;
-    transform: translateY(240px);
+    transform: translateY(360px);
 }
 
 .container-slide{
@@ -426,6 +514,15 @@ height: 100vh;
 .carousel-activity{
     max-height: 100%;
 }
+.institucional{
+    height: auto;
+}
+.container .list-inline{
+    display: flex;
+    flex-direction: column;
+    margin: 20px auto;
+}
+
 }
 
 
